--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,16 @@ body {
     flex-basis: (33% - 6rem);
 }
 
+.cartao__conteudo {
+    text-align: center;
+    background-color: aquamarine;
+    height: 100%;
+}
 
+
+.cartao__conteudo h3 {
+    background-color: tomato;
+}
 
 
 
